cmake_minimum_required(VERSION 3.31)
project(node-dawn)
add_subdirectory(third_party)

set(NODE_BINDING_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}" CACHE PATH "node binding output dir")

set_target_properties(dawn_node PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY ${NODE_BINDING_BINARY_DIR}
    RUNTIME_OUTPUT_DIRECTORY ${NODE_BINDING_BINARY_DIR}
    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${NODE_BINDING_BINARY_DIR}
    LIBRARY_OUTPUT_DIRECTORY_RELEASE ${NODE_BINDING_BINARY_DIR}
)
